--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
     "swagger-client": "~2.0",
     "handlebars": "~1.0.10",
     "less": "~1.4.2"
-  }
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "matchdep": "~0.1.2",
+    "grunt-contrib-compress": "~0.5.2",
+    "grunt-env": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "semver": "~2.2.1",
+    "shelljs": "~0.2.6"
+  }  
 }
